package com.Candido.ConferenciaCientifica;

public class ArtigoCientifico {
    String tema;
    String presentacion;
    Boolean curto;
    Boolean longo;
    Autor autor;
}
