package com.Candido.ConferenciaCientifica;

public class Orador extends Participante {
    public void presentar(ArtigoCientifico artigoCientifico){
        System.out.println(artigoCientifico.presentacion);
    }
}

