package com.Candido.ConferenciaCientifica;

public class Sesion {
    int data;
    int horaDeInicio;
    int presentes;
}
